# docker_project

./: .dockerignore  docker-compose.yaml  pyproject.toml
docker/: Dockerfile
src/: entrypoint.sh  pyproject.toml
src/backend/: main.py
src/backend/infrastructure/entrypoints/rest_api/: __init__.py  app.py
src/backend/infrastructure/entrypoints/rest_api/endpoints/hello_world/: __init__.py  views.py
